Kubernetes/mongo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo
  labels:
    app: mongo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo
  template:
    metadata:
      labels:
        app: mongo
    spec:
      containers:
      - name: mongo
        stdin: true
        tty: true
        image: mongo:latest
        ports:
        - containerPort: 27017
        # env:
        # - name: MONGO_INITDB_ROOT_USERNAME
        #   valueFrom:
        #     secretKeyRef:
        #       name: mongo-secret
        #       key: mongo-user
        # - name: MONGO_INITDB_ROOT_PASSWORD
        #   valueFrom:
        #     secretKeyRef:
        #       name: mongo-secret
        #       key: mongo-password
        volumeMounts:
        - name: mongo-storage
          mountPath: /data/db
      volumes:
      - name: mongo-storage
        emptyDir: {}

---

apiVersion: v1
kind: Service
metadata:
  name: mongo-service
spec:
  selector:
    app: mongo
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
