Kubernetes/node-port.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-port
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: NodePort
